[package]
name = "doc-and-pony-show"
version = "0.1.0"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
